@@ -81,6 +81,7 @@ class JackCoreAudioDriver : public JackAudioDriver
         bool fMonitor;
         float fIOUsage;
         float fComputationGrain;
+        bool fClockDriftCompensate;
     
         /*    
     #ifdef MAC_OS_X_VERSION_10_5
@@ -121,7 +122,7 @@ class JackCoreAudioDriver : public JackAudioDriver
         OSStatus GetDefaultOutputDevice(AudioDeviceID* id);
         OSStatus GetDeviceNameFromID(AudioDeviceID id, char* name);
         OSStatus GetTotalChannels(AudioDeviceID device, int& channelCount, bool isInput);
-
+   
         // Setup
         OSStatus CreateAggregateDevice(AudioDeviceID captureDeviceID, AudioDeviceID playbackDeviceID, jack_nframes_t samplerate, AudioDeviceID* outAggregateDevice);
         OSStatus CreateAggregateDeviceAux(vector<AudioDeviceID> captureDeviceID, vector<AudioDeviceID> playbackDeviceID, jack_nframes_t samplerate, AudioDeviceID* outAggregateDevice);
@@ -183,7 +184,8 @@ class JackCoreAudioDriver : public JackAudioDriver
                  jack_nframes_t playback_latency,
                  int async_output_latency,
                  int computation_grain,
-                 bool hogged);
+                 bool hogged,
+                 bool clock_drift);
         int Close();
 
         int Attach();
